--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffa264e5;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ff03c0;
 }
 
 body {
@@ -28,6 +28,8 @@ body {
   place-items: start;
   min-width: 320px;
   min-height: 100vh;
+   background-color:#ff03c0/;
+   color: white;
 }
 
 h1 {
