--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   place-items: start;
   min-width: 320px;
   min-height: 100vh;
-   background-color:#ff03c0/;
+   background-color: #ff03c0;
    color: white;
 }
 
